tests to try to fix pb with dropdown menu when collapsed can't scroll

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,8 +19,8 @@
 
 $screen-xs-min: 300px;
 $screen-sm-min: 400px;
-$screen-md-min: 1000px;
-$screen-lg-min: 1200px;
+$screen-md-min: 2500px;
+$screen-lg-min: 4800px;
 
 // this tells which screen size to use to start breaking on
 // will tell navbar when to collapse
